fix mob spacing 5

--- a/taipei.css
+++ b/taipei.css
@@ -237,7 +237,7 @@ svg:hover {
     .byline {
         font-size: 0.8rem;
         padding: 0px 10px 40px 10px;
-        width: 300px;
+        width: 320px;
         margin: auto;
         /* left: 50%;
         margin-right: -50%; */
